# ucp-agent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  restart_server.ps1
frontend/: package-lock.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: FormattedMessage.jsx  PaymentModal.jsx  TrackingModal.jsx
frontend/src/pages/: CatalogPage.jsx  ChatPage.jsx
src/agent/: __init__.py  client.py  federation_agent.py  shopping_agent.py  tools.py
src/server/: __init__.py  app.py  multi_shop.py
src/server/capabilities/: __init__.py  chat.py  checkout.py  discovery.py  products.py
src/server/models/: __init__.py  database.py  order.py  product.py
